infrastructure/monitoring/manifests/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
  labels:
    app: monitoring
